Decompose to Partial Class
Split up Arguard class into a partial class with a file for each type that validation is available for. Test class also split to mirror the new structure.

--- a/Arguard/Arguard.csproj
+++ b/Arguard/Arguard.csproj
@@ -41,7 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arguard.cs" />
+    <Compile Include="ArguardDouble.cs" />
+    <Compile Include="ArguardEnumerable.cs" />
+    <Compile Include="ArguardGuid.cs" />
+    <Compile Include="ArguardLong.cs" />
+    <Compile Include="ArguardNull.cs" />
+    <Compile Include="ArguardString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
