--- a/Arguard.Tests/Arguard.Tests.csproj
+++ b/Arguard.Tests/Arguard.Tests.csproj
@@ -48,7 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArguardTests.cs" />
+    <Compile Include="ArguardDouble.cs" />
+    <Compile Include="ArguardEnumerable.cs" />
+    <Compile Include="ArguardGuidTests.cs" />
+    <Compile Include="ArguardLong.cs" />
+    <Compile Include="ArguardNullTests.cs" />
+    <Compile Include="ArguardStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
