Add Test to File Names and Re-order Test Cases
Add order of test cases to match order of method definitions. Add missing Test to file names where appropriate.

--- a/Arguard.Tests/Arguard.Tests.csproj
+++ b/Arguard.Tests/Arguard.Tests.csproj
@@ -48,10 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArguardDouble.cs" />
-    <Compile Include="ArguardEnumerable.cs" />
+    <Compile Include="ArguardDoubleTests.cs" />
+    <Compile Include="ArguardEnumerableTests.cs" />
     <Compile Include="ArguardGuidTests.cs" />
-    <Compile Include="ArguardLong.cs" />
+    <Compile Include="ArguardLongTests.cs" />
     <Compile Include="ArguardNullTests.cs" />
     <Compile Include="ArguardStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
