Add NotPositive Method for Double/Float. Decompose Double and Long Test File.
Add NotPositive method for double/float types. Split up integer and float test cases from long and float test cases.

--- a/Arguard.Tests/Arguard.Tests.csproj
+++ b/Arguard.Tests/Arguard.Tests.csproj
@@ -51,10 +51,12 @@
   <ItemGroup>
     <Compile Include="ArguardDoubleTests.cs" />
     <Compile Include="ArguardEnumerableTests.cs" />
+    <Compile Include="ArguardFloatTests.cs" />
     <Compile Include="ArguardGuidTests.cs" />
     <Compile Include="ArguardLongTests.cs" />
     <Compile Include="ArguardNullTests.cs" />
     <Compile Include="ArguardStringTests.cs" />
+    <Compile Include="ArguardIntegerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
