Common Condition Checking Methods
Introduce common methods for evaluating a condition on the argument via Func<bool> call and throw appropriate exception based if true. Refactor existing Arguard classes to use this new mechanism.

--- a/Arguard/Arguard.csproj
+++ b/Arguard/Arguard.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arguard.cs" />
     <Compile Include="ArguardDouble.cs" />
     <Compile Include="ArguardEnumerable.cs" />
     <Compile Include="ArguardGuid.cs" />
