Boolean Validation Methods
Add validation methods and unit tests for verifying boolean arguments.

--- a/Arguard.Tests/Arguard.Tests.csproj
+++ b/Arguard.Tests/Arguard.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArguardBooleanTests.cs" />
     <Compile Include="ArguardDoubleTests.cs" />
     <Compile Include="ArguardEnumerableTests.cs" />
     <Compile Include="ArguardGuidTests.cs" />
